--- a/ERP_project/frontend/templates/dashboard_auth/login.html
+++ b/ERP_project/frontend/templates/dashboard_auth/login.html
@@ -54,7 +54,10 @@
                                     <button type="submit" class="btn btn-primary">
                                         login
                                     </button>
-                                </div>                                
+                                </div>    
+                                <div>
+                                    NEW users , please <a href="signup">signup </a> here
+                                </div>                            
 
         </div>
 
