--- a/ERP_project/frontend/templates/products/add_product.html
+++ b/ERP_project/frontend/templates/products/add_product.html
@@ -30,12 +30,8 @@
                         <div class="card">
                             <div class="card-header">add_product</div>
                             <div class="card-body">
-                                <!-- {% if error_message %}
-                                <div style="border-bottom: crimson 1px solid; margin-bottom:20px;">
-                                    <div style="text-align:center; margin:10px; color:red; font-size: 20px; "><b>  {{error_message}} </b> </div>
-                                </div>
-                            {% endif %} -->
-                                <form method="POST">
+                               
+                                <form method="POST"  enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <div class="form-group row">
                                         <label for="full_name" class="col-md-4 col-form-label text-md-right">name
@@ -45,17 +41,27 @@
                                         </div>
                                     </div>
 
-                                    <!-- <div class="form-group row">
-                                        <label for="price" class="col-md-4 col-form-label text-md-right">price
+                                    <div class="form-group row">
+                                        <label for="price" class="col-md-4 col-form-label text-md-right">purchase_price
                                         </label>
                                         <div class="col-md-6">
-                                            <input type="number" class="form-control" name="price">
+                                            <input type="number" class="form-control" name="purchase_price">
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <div class="form-group row">
-                                        <label for="exampleFormControlFile1">imput image</label>
-                                        <input type="file" name='image' class="form-control-file"
-                                            id="exampleFormControlFile1">
+                                        <label for="price" class="col-md-4 col-form-label text-md-right">sell_price
+                                        </label>
+                                        <div class="col-md-6">
+                                            <input type="number" class="form-control" name="sell_price">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="image" class="col-md-4 col-form-label text-md-right">Image
+                                        </label>
+                                        <div class="col-md-6">
+                                            <input type="file" class="form-control" name="image">
+                                        </div>
+                                        
                                     </div>
 
                             </div>
